--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GymAssist</string>
+    <string name="login_string">Welcome to GymAssist \n Please log in to go further</string>
 </resources>
