--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="logout">Logout</string>
     <string name="profile_bottom_info_text">All personal data is provided by user\'s Google Account \n and cannot be changed within GymAssist</string>
     <string name="profile_image">profile image</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="weight_history_title">Weight history</string>
+    <string name="dialog_add_weight_title">Add weight</string>
+    <string name="dialog_add_weight_desc">Enter your actual weight.</string>
+    <string name="dialog_button_cancel">Cancel</string>
+    <string name="dialog_button_add">Add</string>
 </resources>
