--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="exercise_item_weight">Weight:</string>
     <string name="delete">Delete</string>
     <string name="add">Add</string>
+    <string name="dialog_delete_exercise_title">Delete exercise</string>
+    <string name="dialog_delete_exercise_desc">Are you sure you want to delete this exercise?</string>
+    <string name="dialog_button_confirm">Confirm</string>
 </resources>
