--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,9 +31,11 @@
     <string name="exercise_item_sets">Sets:</string>
     <string name="exercise_item_reps">Reps:</string>
     <string name="exercise_item_weight">Weight:</string>
-    <string name="delete">Delete</string>
-    <string name="add">Add</string>
     <string name="dialog_delete_exercise_title">Delete exercise</string>
     <string name="dialog_delete_exercise_desc">Are you sure you want to delete this exercise?</string>
     <string name="dialog_button_confirm">Confirm</string>
+    <string name="dialog_add_progress_title">Add progress</string>
+    <string name="dialog_add_progress_desc">Enter new value of set, rep and weight.</string>
+    <string name="add_progress">Add progress</string>
+    <string name="delete_exercise">Delete exercise</string>
 </resources>
